**Duplicate sequence numbers should not be allowed (wherever applicable) in Scarab admin pages.
Changes:
*src/java/org/tigris/scarab/actions/base/RequireLoginFirstAction.java
#public boolean areThereDupeSequences()-new method added to check duplicate
 sequence number in any om object.
*src/java/org/tigris/scarab/actions/admin/ArtifactTypeEdit.java
#doSavegroups()-code that checks duplicate sequences is factored out and pushedd
into the super class.
*src/java/org/tigris/scarab/actions/admin/GlobalArtifactTypeCreate.java
*src/java/org/tigris/scarab/actions/admin/ManageArtifactTypes.java
*src/java/org/tigris/scarab/actions/admin/AttributeGroupEdit.java
*src/java/org/tigris/scarab/actions/admin/ModuleAttributeEdit.java
*src/java/org/tigris/scarab/actions/admin/IssueTypeAttributeEdit.java
*src/java/org/tigris/scarab/actions/admin/GlobalAttributeEdit.java

In all the above classes-
#Check for duplicate sequence numbers added.
#doDone() methods modified so that 'doCancel()' is called only on
successful execution of 'doSave' methods, meaning there is no alert message set.

*src/templates/screens/admin/GlobalAttributeEdit.vm
#Hidden field added for the 'sequence' field of locked options.

src/i18n/ScarabBundle_en_US.properties
#New resources added to alert the user on duplicate sequence numbers.

Issue: PCN20483
Reviewed by: elicia@collab.net,jmcnally@collab.net
Submitted by: venkat@collab.net

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -799,6 +799,7 @@ AttributeGroups=Attribute groups
 Active=Active
 Sequence=Sequence #
 UserAttributes=User attributes
+AttributeOptions=Attribute options
 SentToSelected=sent to selected submittees
 NoIssueTypes=There are no more issue types to add to this module.
 IssueTypes=Issue types
@@ -1062,6 +1063,7 @@ IssueTypeNameExists=Issue type by that name already exists
 # this is also used in ArtifactTypeEdit
 DuplicateSequenceNumbersForAttributeGroups=Please do not enter duplicate sequence numbers for attribute groups.
 CannotPositionDuplicateCheckFirst=The duplicate check cannot be at the beginning.
+DuplicateSequenceNumbersFound=Please do not enter duplicate sequence numbers for {0}.
 
 ## GlobalArtifactTypes 
 ChangesResultDuplicateNames=Changes would result in duplicate names
