Issue number:   15727 Submitted by:  beril@collab.net Log: -added current date and time to query results      -moved query scope to the bottom of the page to prevent the query results to be pushed down when the scope covers many module(project)/issue types(artifact types)
Issue number:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -363,7 +363,7 @@ MissedRequired2=Please supply a short description which will be useful for users
 IssueTypesInProject=Issue types in this module
 IssueEntryComment=Comment
 NotProvided=Not provided.
-IssueListCount=(Number of issues: {0})
+IssueListCount=({0} issue(s) found)
 PatchFile=Patch file (text/plain, diffs)
 PlainText=Plain text (text/plain)
 HTMLSource=HTML source (text/html)
@@ -495,6 +495,7 @@ SortAscending=sort ascending
 AllLC=all
 SelectedLC=selected
 ProcessResults=Process results
+QueryScope=Query scope
 
 ##ConfigureIssueList
 Attributes=Attributes
