--- a/src_new/org/argouml/i18n/label_de.properties
+++ b/src_new/org/argouml/i18n/label_de.properties
@@ -1,4 +1,4 @@
-# $Id: label_de.properties,v 1.3 2003/08/17 20:24:19 linus Exp $
+# $Id: label_de.properties,v 1.4 2003/08/24 02:19:39 linus Exp $
 # Copyright (c) 2003 The Regents of the University of California. All
 # Rights Reserved. Permission to use, copy, modify, and distribute this
 # software and its documentation without fee, and without a written
@@ -48,7 +48,7 @@ label.base = Basis:
 label.base-class = Basisklasse:
 label.call-event = Ereignis aufrufen
 label.changeability = \u00c4nderbarkeit
-label.changeability-addonly = Nur hinzuf\u00gen
+label.changeability-addonly = Nur hinzuf\u00fcgen
 label.changeability-changeable = \u00e4nderbar
 label.changeability-frozen = eingefroren
 label.child = Kind:
