* src/i18n/ScarabBundle_en_US.properties   IssueIDPrefixNotForModule, IssueIDPrefixesNotForModule: Improved   wording.
Issue: PCN21835

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -117,8 +117,8 @@ UntilApproved=Until approved
 Default=Default
 Date=Date
 Issue=Issue
-IssueIDPrefixNotForModule=ID prefix "{0}" is not for the current module "{1}"
-IssueIDPrefixesNotForModule=ID prefixes are not for the current module "{0}"
+IssueIDPrefixNotForModule=ID prefix "{0}" does not match "{1}", the prefix of the current module
+IssueIDPrefixesNotForModule=ID prefixes do not match "{0}", the prefix of the current module
 IssueIDRangeNotValid=ID range "{0}" not valid
 IssueIDPrefixesDoNotMatch=ID prefixes "{0}" and "{1}" do not match
 IssueType=Issue type
