*** empty log message ***

--- a/compiler/org/eclipse/jdt/internal/compiler/problem/messages.properties
+++ b/compiler/org/eclipse/jdt/internal/compiler/problem/messages.properties
@@ -62,7 +62,7 @@
 76 = The static field {0}.{1} should be accessed in a static way
 77 = The private field {0}.{1} is never read locally
 78 = The static field {0}.{1} should be accessed directly
-
+79 = Unqualified access to the field {0}.{1} 
 80 = The final field {0}.{1} cannot be assigned. It must be blank in this context, not qualified and not in compound assignment
 81 = The blank final field {0} may not have been initialized
 82 = The final field {0} may already have been assigned
@@ -128,9 +128,9 @@
 162 = Cannot return from within an initializer
 163 = Initializer does not complete normally
 164 = Expression must return a value
-165 = Catch block is hidden by another one in the same try statement
+165 = Unreachable catch block for {0}. Only more specific exceptions are thrown and handled by previous catch block(s).
 166 = The default case is already defined
-167 = Unreachable catch block
+167 = Unreachable catch block for {0}. This exception is never thrown from the try statement body
 168 = Unhandled exception type {0}
 169 = case constant must be a char, byte, short, or int instead of {0}
 170 = Duplicate case
@@ -147,6 +147,10 @@
 181 = Unnecessary cast to type {1} for expression of type {0}
 182 = Unnecessary cast to type {1} for expression of type {0}. It is already compatible with the argument type {2}
 183 = The expression of type {0} is already an instance of type {1}
+184 = finally block does not complete normally
+185 = The declared exception {3} is not actually thrown by the method {1}({2}) from type {0}
+186 = The declared exception {2} is not actually thrown by the constructor {0}({1})
+187 = Unreachable catch block for {0}. It is already handled by the catch block for {1}
 
 190 = Read access to enclosing field {0}.{1} is emulated by a synthetic accessor method. Increasing its visibility will improve your performance
 191 = Write access to enclosing field {0}.{1} is emulated by a synthetic accessor method. Increasing its visibility will improve your performance
