--- a/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
+++ b/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
@@ -114,6 +114,7 @@ misc.usage = {compiler.name} {compiler.version}, {compiler.copyright}\n\
 \      deprecation        + deprecation outside deprecated code\n\
 \      emptyBlock           undocumented empty block\n\
 \      fieldHiding          field hiding another variable\n\
+\      finally            + finally block not completing normally\n\
 \      indirectStatic       indirect reference to static member\n\
 \      intfNonInherited   + interface non-inherited method compatibility\n\
 \      localHiding          local variable hiding another variable\n\
@@ -122,10 +123,12 @@ misc.usage = {compiler.name} {compiler.version}, {compiler.copyright}\n\
 \      noEffectAssign     + assignment without effect\n\
 \      pkgDefaultMethod   + attempt to override package-default method\n\
 \      semicolon            superfluous semicolon\n\
-\      unusedArgument       unread method argument\n\
+\      semicolon            superfluous semicolon\n\
+\      unqualifiedField     unqualified reference to field\n\
 \      unusedImport       + unused import declaration\n\
 \      unusedLocal          unread local variable\n\
 \      unusedPrivate        unused private member declaration\n\
+\      unusedThrown         unused declared thrown exception\n\
 \      uselessTypeCheck     unnecessary cast/instanceof operation\n\
 \      specialParamHiding   constructor or setter parameter hiding another field\n\
 \      staticReceiver     + non-static reference to static member\n\
