--- a/src/example/org/apache/struts/webapp/example/ApplicationResources_ja.properties
+++ b/src/example/org/apache/struts/webapp/example/ApplicationResources_ja.properties
@@ -2,31 +2,31 @@ button.cancel=\u30ad\u30e3\u30f3\u30bb\u30eb
 button.confirm=\u78ba\u8a8d
 button.reset=\u30ea\u30bb\u30c3\u30c8
 button.save=\u4fdd\u5b58
-change.message=Your password has expired.  Please ask the system administrator to change it.
-change.try=Try Again
-change.title=Password Has Expired
-database.load= {0} \u304b\u3089\u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u3092\u30ed\u30fc\u30c9\u3067\u304d\u307e\u305b\u3093\u3002
-error.database.missing=<li>\u30e6\u30fc\u30b6\u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u304c\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3002\u30ed\u30b0\u30aa\u30f3\u306e\u8a8d\u8a3c\u304c\u51fa\u6765\u307e\u305b\u3093\u3002</li>
-error.fromAddress.format=<li>From\u30a2\u30c9\u30ec\u30b9\u306e\u66f8\u5f0f\u304c\u6b63\u3057\u304f\u3042\u308a\u307e\u305b\u3093\u3002</li>
-error.fromAddress.required=<li>From\u30a2\u30c9\u30ec\u30b9\u304c\u5fc5\u8981\u3067\u3059\u3002</li>
-error.fullName.required=<li>\u30d5\u30eb\u30cd\u30fc\u30e0\u304c\u5fc5\u8981\u3067\u3059\u3002</li>
-error.host.required=<li>\u30e1\u30fc\u30eb\u30b5\u30fc\u30d0\u304c\u5fc5\u8981\u3067\u3059\u3002</li>
-error.noSubscription=<li>No Subscription bean in user session</li>
-error.password.expired=Your password has expired for username {0}
-error.password.required=<li>\u30d1\u30b9\u30ef\u30fc\u30c9\u304c\u5fc5\u8981\u3067\u3059\u3002</li>
-error.password2.required=<li>\u30d1\u30b9\u30ef\u30fc\u30c9(\u78ba\u8a8d\u7528)\u304c\u5fc5\u8981\u3067\u3059\u3002</li>
-error.password.match=<li>\u30d1\u30b9\u30ef\u30fc\u30c9\u3068\u78ba\u8a8d\u7528\u30d1\u30b9\u30ef\u30fc\u30c9\u304c\u4e00\u81f4\u3057\u3066\u3044\u307e\u305b\u3093\u3002</li>
-error.password.mismatch=<li>\u30e6\u30fc\u30b6\u540d\u307e\u305f\u306f\u30d1\u30b9\u30ef\u30fc\u30c9\u304c\u4e0d\u6b63\u3067\u3059\u3002\u518d\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002</li>
-error.replyToAddress.format=<li>\u8fd4\u4fe1\u30a2\u30c9\u30ec\u30b9\u306e\u66f8\u5f0f\u304c\u6b63\u3057\u304f\u3042\u308a\u307e\u305b\u3093\u3002</li>
-error.transaction.token=<li>\u3053\u306e\u30d5\u30a9\u30fc\u30e0\u306e\u5185\u5bb9\u304c\u6b63\u3057\u304f\u306a\u3044\u305f\u3081\u9001\u4fe1\u3059\u308b\u3053\u3068\u304c\u51fa\u6765\u307e\u305b\u3093\u3002</li>
-error.type.invalid=<li>\u30b5\u30fc\u30d0\u30bf\u30a4\u30d7\u306f 'imap' \u304b 'pop3'\u306e\u3069\u3061\u3089\u304b\u3067\u306a\u3051\u308c\u3070\u306a\u308a\u307e\u305b\u3093\u3002</li>
-error.type.required=<li>\u30b5\u30fc\u30d0\u30bf\u30a4\u30d7\u304c\u5fc5\u8981\u3067\u3059\u3002</li>
-error.username.required=<li>\u30e6\u30fc\u30b6\u540d\u304c\u5fc5\u8981\u3067\u3059\u3002</li>
-error.username.unique=<li>\u305d\u306e\u30e6\u30fc\u30b6\u540d\u306f\u65e2\u306b\u4f7f\u7528\u3055\u308c\u3066\u3044\u307e\u3059\u3002 \u5225\u306e\u30e6\u30fc\u30b6\u540d\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044\u3002</li>
+change.message=\u30D1\u30B9\u30EF\u30FC\u30C9\u306E\u6709\u52B9\u671F\u9650\u304C\u904E\u304E\u307E\u3057\u305F\u3002\u30B7\u30B9\u30C6\u30E0\u7BA1\u7406\u8005\u306B\u304A\u554F\u3044\u5408\u308F\u305B\u4E0B\u3055\u3044
+change.try=\u3082\u3046\u4E00\u5EA6\u8A66\u3057\u3066\u304F\u3060\u3055\u3044
+change.title=\u30d1\u30b9\u30ef\u30fc\u30c9\u671f\u9650\u5207\u308c
+database.load= {0} \u304B\u3089\u30C7\u30FC\u30BF\u30D9\u30FC\u30B9\u3092\u30ED\u30FC\u30C9\u3067\u304D\u307E\u305B\u3093
+error.database.missing=<li>\u30E6\u30FC\u30B6\u30C7\u30FC\u30BF\u30D9\u30FC\u30B9\u304C\u898B\u3064\u304B\u308A\u307E\u305B\u3093\u3002\u30ED\u30B0\u30AA\u30F3\u306E\u8A8D\u8A3C\u304C\u51FA\u6765\u307E\u305B\u3093</li>
+error.fromAddress.format=<li>From\u30A2\u30C9\u30EC\u30B9\u306E\u66F8\u5F0F\u304C\u6B63\u3057\u304F\u3042\u308A\u307E\u305B\u3093</li>
+error.fromAddress.required=<li>From\u30A2\u30C9\u30EC\u30B9\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044</li>
+error.fullName.required=<li>\u30D5\u30EB\u30CD\u30FC\u30E0\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044</li>
+error.host.required=<li>\u30E1\u30FC\u30EB\u30B5\u30FC\u30D0\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044</li>
+error.noSubscription=<li>Subscription bean \u304c\u30bb\u30c3\u30b7\u30e7\u30f3\u306e\u4e2d\u306b\u3042\u308a\u307e\u305b\u3093</li>
+error.password.expired=\u30E6\u30FC\u30B6 {0} \u306E\u30D1\u30B9\u30EF\u30FC\u30C9\u306E\u6709\u52B9\u671F\u9650\u304C\u904E\u304E\u307E\u3057\u305F
+error.password.required=<li>\u30D1\u30B9\u30EF\u30FC\u30C9\u304C\u5FC5\u8981\u3067\u3059</li>
+error.password2.required=<li>\u30D1\u30B9\u30EF\u30FC\u30C9(\u78BA\u8A8D\u7528)\u304C\u5FC5\u8981\u3067\u3059</li>
+error.password.match=<li>\u30D1\u30B9\u30EF\u30FC\u30C9\u3068\u78BA\u8A8D\u7528\u30D1\u30B9\u30EF\u30FC\u30C9\u304C\u4E00\u81F4\u3057\u3066\u3044\u307E\u305B\u3093</li>
+error.password.mismatch=<li>\u30E6\u30FC\u30B6\u540D\u307E\u305F\u306F\u30D1\u30B9\u30EF\u30FC\u30C9\u304C\u4E0D\u6B63\u3067\u3059\u3002\u518D\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044</li>
+error.replyToAddress.format=<li>\u8FD4\u4FE1\u30A2\u30C9\u30EC\u30B9\u306E\u66F8\u5F0F\u304C\u6B63\u3057\u304F\u3042\u308A\u307E\u305B\u3093</li>
+error.transaction.token=<li>\u3053\u306E\u30D5\u30A9\u30FC\u30E0\u306E\u5185\u5BB9\u304C\u6B63\u3057\u304F\u306A\u3044\u305F\u3081\u9001\u4FE1\u3059\u308B\u3053\u3068\u304C\u51FA\u6765\u307E\u305B\u3093</li>
+error.type.invalid=<li>\u30B5\u30FC\u30D0\u30BF\u30A4\u30D7\u306F 'imap' \u304B 'pop3'\u306E\u3069\u3061\u3089\u304B\u3067\u306A\u3051\u308C\u3070\u306A\u308A\u307E\u305B\u3093</li>
+error.type.required=<li>\u30B5\u30FC\u30D0\u30BF\u30A4\u30D7\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044</li>
+error.username.required=<li>\u30E6\u30FC\u30B6\u540D\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044</li>
+error.username.unique=<li>\u305D\u306E\u30E6\u30FC\u30B6\u540D\u306F\u65E2\u306B\u4F7F\u7528\u3055\u308C\u3066\u3044\u307E\u3059\u3002 \u5225\u306E\u30E6\u30FC\u30B6\u540D\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044</li>
 errors.footer=</ul><hr>
 errors.header=<h3><font color="red">\u5165\u529b\u30c1\u30a7\u30c3\u30af\u30a8\u30e9\u30fc</font></h3>\u4ee5\u4e0b\u306e\u30a8\u30e9\u30fc\u3092\u78ba\u8a8d\u3057\u3066\u304f\u3060\u3055\u3044:<ul>
 errors.ioException=I/O\u4f8b\u5916\u304c\u767a\u751f\u3057\u307e\u3057\u305f: {0}
-expired.password=User Password has expired for {0}
+expired.password=\u30E6\u30FC\u30B6 {0} \u306E\u30D1\u30B9\u30EF\u30FC\u30C9\u306E\u6709\u52B9\u671F\u9650\u304C\u904E\u304E\u307E\u3057\u305F
 heading.autoConnect=\u81ea\u52d5\u63a5\u7d9a
 heading.subscriptions=\u73fe\u5728\u306e\u8cfc\u8aad\u60c5\u5831
 heading.host=\u30db\u30b9\u30c8\u540d
@@ -36,12 +36,12 @@ heading.action=\u64cd\u4f5c
 index.heading=MailReader\u30c7\u30e2\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3 \u30aa\u30d7\u30b7\u30e7\u30f3
 index.logon=MailReader\u30c7\u30e2\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3 - \u30ed\u30b0\u30aa\u30f3
 index.registration=MailReader\u30c7\u30e2\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3 - \u30e6\u30fc\u30b6\u767b\u9332
-index.title=MailReader\u30c7\u30e2\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3(Struts 1.0-b1)
+index.title=MailReader\u30c7\u30e2\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3(Struts 1.1-dev)
 index.tour=\u30b5\u30f3\u30d7\u30eb\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u3092\u6563\u7b56\u3059\u308b
 linkSubscription.io=I/O\u30a8\u30e9\u30fc: {0}
-linkSubscription.noSubscription=\u6b21\u306e\u5c5e\u6027\u306b\u95a2\u3059\u308b\u8cfc\u8aad\u60c5\u5831\u306f\u5b58\u5728\u3057\u307e\u305b\u3093\uff1a {0} 
+linkSubscription.noSubscription=\u5c5e\u6027 {0} \u306b\u8cfc\u8aad\u60c5\u5831\u304c\u5b58\u5728\u3057\u307e\u305b\u3093  
 linkUser.io=I/O\u30a8\u30e9\u30fc: {0}
-linkUser.noUser=\u6b21\u306e\u5c5e\u6027\u306b\u95a2\u3059\u308b\u30e6\u30fc\u30b6\u306f\u5b58\u5728\u3057\u307e\u305b\u3093\uff1a {0}
+linkUser.noUser=\u5c5e\u6027 {0} \u306b\u30e6\u30fc\u30b6\u60c5\u5831\u304c\u5b58\u5728\u3057\u307e\u305b\u3093
 logon.title=MailReader\u30c7\u30e2\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3 - \u30ed\u30b0\u30aa\u30f3
 mainMenu.heading=\u30e1\u30a4\u30f3\u30e1\u30cb\u30e5\u30fc
 mainMenu.logoff=MailReader \u30c7\u30e2\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u306e\u30ed\u30b0\u30aa\u30d5
@@ -49,17 +49,17 @@ mainMenu.registration=\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb\u306e\u7de8\u96c6
 mainMenu.title=MailReader\u30c7\u30e2\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3 - \u30e1\u30a4\u30f3\u30e1\u30cb\u30e5\u30fc
 option.imap=IMAP \u30d7\u30ed\u30c8\u30b3\u30eb
 option.pop3=POP3 \u30d7\u30ed\u30c8\u30b3\u30eb
-prompt.autoConnect=\u81ea\u52d5\u63a5\u7d9a:
-prompt.fromAddress=From\u30a2\u30c9\u30ec\u30b9:
-prompt.fullName=\u30d5\u30eb\u30cd\u30fc\u30e0:
-prompt.mailHostname=\u30e1\u30fc\u30eb\u30b5\u30fc\u30d0:
-prompt.mailPassword=\u30e1\u30fc\u30eb\u30d1\u30b9\u30ef\u30fc\u30c9:
-prompt.mailServerType=\u30b5\u30fc\u30d0\u30bf\u30a4\u30d7:
-prompt.mailUsername=\u30e1\u30fc\u30eb\u30e6\u30fc\u30b6\u540d:
-prompt.password=\u30d1\u30b9\u30ef\u30fc\u30c9:
-prompt.password2=\u30d1\u30b9\u30ef\u30fc\u30c9(\u78ba\u8a8d\u7528):
-prompt.replyToAddress=\u8fd4\u4fe1\u30a2\u30c9\u30ec\u30b9:
-prompt.username=\u30e6\u30fc\u30b6\u540d:
+prompt.autoConnect=\u81ea\u52d5\u63a5\u7d9a
+prompt.fromAddress=From\u30a2\u30c9\u30ec\u30b9
+prompt.fullName=\u30d5\u30eb\u30cd\u30fc\u30e0
+prompt.mailHostname=\u30e1\u30fc\u30eb\u30b5\u30fc\u30d0
+prompt.mailPassword=\u30e1\u30fc\u30eb\u30d1\u30b9\u30ef\u30fc\u30c9
+prompt.mailServerType=\u30b5\u30fc\u30d0\u30bf\u30a4\u30d7
+prompt.mailUsername=\u30e1\u30fc\u30eb\u30e6\u30fc\u30b6\u540d
+prompt.password=\u30d1\u30b9\u30ef\u30fc\u30c9
+prompt.password2=\u30d1\u30b9\u30ef\u30fc\u30c9(\u78ba\u8a8d\u7528)
+prompt.replyToAddress=\u8fd4\u4fe1\u30a2\u30c9\u30ec\u30b9
+prompt.username=\u30e6\u30fc\u30b6\u540d
 registration.addSubscription=\u65b0\u898f\u4f5c\u6210
 registration.deleteSubscription=\u524a\u9664
 registration.editSubscription=\u7de8\u96c6
@@ -70,17 +70,17 @@ subscription.title.delete=\u30e1\u30fc\u30eb\u8cfc\u8aad\u60c5\u5831\u306e\u524a
 subscription.title.edit=\u30e1\u30fc\u30eb\u8cfc\u8aad\u60c5\u5831\u306e\u7de8\u96c6
 
 # Standard error messages for validator framework checks
-errors.required={0} is required.
-errors.minlength={0} cannot be less than {1} characters.
-errors.maxlength={0} cannot be greater than {2} characters.
-errors.invalid={0} is invalid.
-errors.byte={0} must be an byte.
-errors.short={0} must be an short.
-errors.integer={0} must be an integer.
-errors.long={0} must be an long.
-errors.float={0} must be an float.
-errors.double={0} must be an double.
-errors.date={0} is not a date.
-errors.range={0} is not in the range {1} through {2}.
-errors.creditcard={0} is not a valid credit card number.
-errors.email={0} is an invalid e-mail address.
+errors.required={0} \u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+errors.minlength={0} \u306f {1} \u6587\u5b57\u4ee5\u4e0a\u3067\u306a\u3051\u308c\u3070\u306a\u308a\u307e\u305b\u3093\u3002
+errors.maxlength={0} \u306f {2} \u6587\u5b57\u4ee5\u4e0b\u3067\u306a\u3051\u308c\u3070\u306a\u308a\u307e\u305b\u3093\u3002
+errors.invalid={0} \u306f\u6b63\u3057\u304f\u3042\u308a\u307e\u305b\u3093\u3002
+errors.byte={0} \u306fbyte\u578b\u3067\u306a\u3051\u308c\u3070\u306a\u308a\u307e\u305b\u3093\u3002
+errors.short={0} \u306fshort\u578b\u3067\u306a\u3051\u308c\u3070\u306a\u308a\u307e\u305b\u3093\u3002
+errors.integer={0} \u306finteger\u578b\u3067\u306a\u3051\u308c\u3070\u306a\u308a\u307e\u305b\u3093\u3002
+errors.long={0} \u306flong\u578b\u3067\u306a\u3051\u308c\u3070\u306a\u308a\u307e\u305b\u3093\u3002
+errors.float={0} \u306ffloat\u578b\u3067\u306a\u3051\u308c\u3070\u306a\u308a\u307e\u305b\u3093\u3002
+errors.double={0} \u306fdouble\u578b\u3067\u306a\u3051\u308c\u3070\u306a\u308a\u307e\u305b\u3093\u3002
+errors.date={0} \u306f\u65e5\u4ed8\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002
+errors.range={0} \u306f {1} \u304b\u3089 {2} \u306e\u9593\u3067\u306a\u3051\u308c\u3070\u306a\u308a\u307e\u305b\u3093\u3002
+errors.creditcard={0} \u306f\u6b63\u3057\u3044\u30af\u30ec\u30b8\u30c3\u30c8\u30ab\u30fc\u30c9\u756a\u53f7\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002
+errors.email={0} \u306f\u6b63\u3057\u3044\u30e1\u30fc\u30eb\u30a2\u30c9\u30ec\u30b9\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002
