Bug 18255 Provide Japanese resources updates for Struts Patches submitted by Tetsuo Ajima, Tatsuo Takahashi, Satoshi Hioki Yoshinori Ashizawa
Thank you very much !

--- a/src/validator/org/apache/struts/webapp/validator/ApplicationResources_fr.properties
+++ b/src/validator/org/apache/struts/webapp/validator/ApplicationResources_fr.properties
@@ -80,3 +80,4 @@ jsTypeForm.description=avec la validation de JavaScript de côté de client et la 
 # Locale Form
 localeForm.fr=Il y a quelques différences sur la fiche, la fiche de JavaScript, et la fiche de plusieurs pages (voient / WEB-INF/validation.xml). Sur la forme de forme de type et de type de JavaScript la zone de nombre entier devrait tomber dans un intervalle de 50-60 et la zone de date devrait avoir un format de ' dd.MM.yyyy '.
 localeForm.frCA=Sur la forme de type de JavaScript la zone de nombre entier devrait tomber dans un intervalle de 100-200 et la zone de date devrait avoir un format de ' dd-MM-yyyy '.
+localeForm.ja=Sur la forme de type de JavaScript la zone de nombre entier devrait tomber dans un intervalle de 400-700 et la zone de date devrait avoir un format de ' yyyy/MM/dd '.
