--- a/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
+++ b/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
@@ -95,8 +95,8 @@ misc.usage = {compiler.name} {compiler.version}, {compiler.copyright}\n\
 \                       when suffixed with ''[''<enc>'']'' (e.g. X.java[utf8])\n\
 \ \n\
 \ Compliance options:\n\
-\    -1.3             + use 1.3 compliance level\n\
-\    -1.4               use 1.4 compliance level\n\
+\    -1.3               use 1.3 compliance level\n\
+\    -1.4             + use 1.4 compliance level\n\
 \    -source <version>  set source level (1.3 or 1.4, default based on compliance level)\n\
 \    -target <version>  set classfile target (1.1 to 1.4, default based on compliance level)\n\
 \ \n\
@@ -107,7 +107,7 @@ misc.usage = {compiler.name} {compiler.version}, {compiler.copyright}\n\
 \    -warn: <warnings separated by ,> where warnings include:\n\
 \      none                 disable all warnings\n\
 \      allDeprecation       deprecation including inside deprecated code\n\
-\      assertIdentifier     ''assert'' used as identifier\n\
+\      assertIdentifier   + ''assert'' used as identifier\n\
 \      charConcat         + char[] in String concat\n\
 \      conditionAssign      possible accidental boolean assignment\n\
 \      constructorName    + method with constructor name\n\
