* src/i18n/ScarabBundle_en_US.properties   IssueLimitExceeded: New resource added to alert the user when more   than the configured number of artifacts is selected for an action.
* src/templates/macros/GlobalMacros.vm
  #processQueryResults(): One more argument (issue count) is added to
  the macro to conditionally display the "Xxx all" options.


* src/templates/screens/IssueList.vm
  #processQueryResults() is called regardless of the number of
  artifacts in the search result. Pass that number to the macro.


* src/conf/Scarab.properties
  scarab.issue.max.view, scarab.issue.max.assign,
  scarab.issue.max.move, scarab.issue.max.copy: New properties added
  to configure the max issues that can be viewed/assigned/copied/moved
  simultaneously.


* src/java/org/tigris/scarab/util/ScarabConstants.java
  ISSUE_MAX_VIEW, ISSUE_MAX_ASSIGN, ISSUE_MAX_MOVE, ISSUE_MAX_COPY:
  New constants added to hold the value of the properties mentioned
  above.


* src/java/org/tigris/scarab/actions/Search.java
  doPerform(): Condition added to alert the user when more than the
  configured number of artifacts is selected for an action.


Issue: PCN21658
Submitted by: Venkat
Reviewed by: Daniel Rall

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -341,6 +341,7 @@ PleaseEnterIssueID=Please enter an issue ID.
 NoPermissionToViewIssue=You do not have permission to view an issue with that ID.  If you believe it is a valid ID, check with the project owner or system administrator.
 History=History
 IssueSearchResults=Issue search results
+IssueLimitExceeded=Please select not more than {0} issues.
 ChooseDependencyType=Choose dependency type
 HideCommentList=Hide complete comment list
 ShowCommentList=Show complete comment list
