forward port from SCAST_T1_1
Issue number: 21780 - Too many report criteria can lead to a resource
 starvation due to mysql limitations.
 Modified files:
 * src/conf/Scarab.properties - added scarab.report.max.criteria property
   set to a safe value of 5.
 * src/i18n/ScarabBundle_en_US.properties - Added keys for new messages
   regarding the limit: ReportIsTooExpensive,
   ThisAxisMustBeDatesUnlessHeadingsAreRemoved, AvailableNumberHeadings,
   NoMoreHeadings
 * src/java/org/tigris/scarab/actions/ConfigureReport.java -
   doSettype: don't allow switching from a date axis, if the other axis
   already has the maximum headings.
   doGeneratereport: give alert message, if the query was too expensive. This
   is to cover old saved reports that were too complex.
 * src/java/org/tigris/scarab/reports/ReportDefinition.java
   added methods:
   maximumHeadings()
   allowMoreHeadings(ReportAxis axis)
   reportQueryIsExpensive()
   totalAvailableNumberOfHeadings()
   availableNumberOfHeadings(ReportAxis axis)
   totalNumberOfNonDateHeadings()
   numberOfNonDateHeadings(ReportAxis axis)
   to help with calculation and notification of report limits.
 * src/java/org/tigris/scarab/screens/ReportExport.java - doBuildTemplate:
   abort report generation with a message if the definition is too complex.
 * src/java/org/tigris/scarab/util/ScarabConstants.java - added
   REPORT_MAX_CRITERIA constant which can be modified via Scarab.properties
 * src/templates/screens/reports/AxisConfiguration.vm - use methods in
   ReportDefinition to notify user of limits to headings and to hide
   the 'Add headings' button when the limit is reached.
 * src/templates/screens/reports/Report_1.vm - do not allow generation of the
   report if it exceeds limits and give a message to that effect. This is
   for the benefit of previously saved reports and possibly any url hacking.

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -735,6 +735,10 @@ GroupingItemsAppear=Grouping items appear as a single heading bearing the select
 IncompleteReportDefinition=The report does not appear ready.  Please check its definition; it is possible the data to be shown in the report has been made invalid by an administrator.
 ReportDefinitionModified=This report used data that has been removed by an administrator.  The report definition is modified accordingly.
 ErrorOccurredCheckingMessage=There appeared to be a message related to this report, but an error occured when retrieving it.
+ReportIsTooExpensive=This report cannot be generated because there are too many headings defined. The combined total number of row and column headings must be less than or equal to {0}.
+ThisAxisMustBeDatesUnlessHeadingsAreRemoved=This axis must be dates unless a heading is removed from the other axis.
+AvailableNumberHeadings=You may add up to {0} more headings.
+NoMoreHeadings=The maximum number of headings has been reached.
 
 ## Dependencies
 depend_blocking=blocks
