--- a/src_new/org/argouml/i18n/action_de.properties
+++ b/src_new/org/argouml/i18n/action_de.properties
@@ -1,4 +1,4 @@
-# $Id: action_de.properties,v 1.2 2003/08/17 20:24:19 linus Exp $
+# $Id: action_de.properties,v 1.3 2003/09/05 19:59:14 thn Exp $
 # Copyright (c) 2003 The Regents of the University of California. All
 # Rights Reserved. Permission to use, copy, modify, and distribute this
 # software and its documentation without fee, and without a written
@@ -98,6 +98,7 @@ action.nudge-left = Ein Knoten nach links
 action.nudge-right = Ein Knoten nach rechts
 action.nudge-up = Ein Knoten nach oben
 action.open-project = Projekt \u00d6ffnen...
+action.page-setup = Seite einrichten...
 action.paste = Einf\u00fcgen
 action.print = Drucken...
 action.properties = Eigenschaften
