Avoid the "Alert! There was an error processing your query: General error: Too many tables. MySQL can only use 31 tables in a join" error (don't yet know if this is applicable to other DBs):
* src/conf/Scarab.properties
  scarab.query.max.join>: Max number of attribute columns supported for
  query reults.


* src/i18n/ScarabBundle_en_US.properties
  ColumnsDropped: A resource noting that columns were dropped when the
  max number of attribute columns is exceeded.


* src/java/org/tigris/scarab/tools/ScarabRequestTool.java
  initialIssueListColumnsSize: Keep track if the columns were reduced
  to avoid DB limits.

  issueListColumns: Cache list so that we always return the same
  object for all invocations within a single request.

  getRModuleUserAttributes(): Incoporated new members.


* src/java/org/tigris/scarab/util/ScarabConstants.java
  QUERY_MAX_JOIN: Constant for the scarab.query.max.join property.


* src/java/org/tigris/scarab/util/word/IssueSearch.java
* src/templates/screens/IssueList.vm
  Handle possibility of exceeding attribute column limit.


Issue: PCN21631
Submitted by: John McNally

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -494,6 +494,7 @@ AllLC=all
 SelectedLC=selected
 ProcessResults=Process results
 QueryScope=Query scope
+ColumnsDropped=Some attribute columns were dropped due to query complexity.
 
 ##ConfigureIssueList
 Attributes=Attributes
