[feature]added actions for html editing

--- a/res/org/columba/mail/i18n/menu/composer.properties
+++ b/res/org/columba/mail/i18n/menu/composer.properties
@@ -32,3 +32,19 @@ menu_message_encrypt_mnemonic=1
 menu_edit_extern_edit_mnemonic=1
 composer_no_subject=1
 priority_mnemonic=1
+
+menu_format = Format
+menu_format_paragraph = Paragraph
+menu_format_enable_html = HTML Message
+menu_format_style = Style
+menu_format_font_size = Font Size
+menu_format_bold = Bold
+menu_format_italic = Italic
+menu_format_underline = Underline
+menu_format_strike = Strike Out
+menu_format_teletyper = Teletyper
+menu_format_left_justify = Left
+menu_format_right_justify = Right
+menu_format_center_justify = Center
+menu_format_style = Style
+menu_format_justification = Justify
