--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -542,6 +542,7 @@ UserSelectedFrequency=User selected frequency
 CrossModuleQueriesScope=Cross module queries always have personal scope.
 NoSavedQueries=There are no saved queries. Click the "Create new" button to create a new query.
 SavedQueryInfo=Saved query information
+QueryModified=Query has been modified.
 NoQueryToSave=No query to save. Click the "Create new" button to create a new query.
 EnterAQuery=enter a query.
 SelectedIssueTypes=Issue types selected for this query
@@ -1788,6 +1789,7 @@ UQSP11=Using saved queries assists the user in keeping up to date on changes to 
 UQSP12=Subscriptions can be helpful if you have a project critical component that you need to keep a careful eye on. For instance, you are responsible for all database access issues. You know that there are some potential problems with database access for users on the Windows 95 operating system. Creating, saving and subscribing to a query with the search parameters that define your area of concern will keep alert you to issues as frequently as you need them.
 DuplicateQueryName=A query by that name already exists. Please choose another name.
 CannotEditQuery=You do not have permissions to edit this query.
+NotifyPendingApproval=The {0} you have suggested is currently pending for approval and hence unavailable for use. You will be notified by email once the module owner takes an action on this item.
 CrossModuleQueriesHavePersonalScope=Cross module queries always have personal scope
 
 ## UserQueryCustom
