[intern]added observers, bold/italic/underline/h1/h2/h3 already work, xml-configuration added, toolbar added

--- a/res/org/columba/mail/i18n/menu/composer.properties
+++ b/res/org/columba/mail/i18n/menu/composer.properties
@@ -39,12 +39,20 @@ menu_format_enable_html = HTML Message
 menu_format_style = Style
 menu_format_font_size = Font Size
 menu_format_bold = Bold
+menu_format_bold_tooltip = Format Selected Text Bold
 menu_format_italic = Italic
+menu_format_italic_tooltip = Format Selected Text Italic
 menu_format_underline = Underline
+menu_format_underline_tooltip = Format Selected Text as Underlined
 menu_format_strike = Strike Out
+menu_format_strike_tooltip = Format Selected Text as Strike Out
 menu_format_teletyper = Teletyper
+menu_format_teletyper_tooltip = Format Selected Text as Teletyper
 menu_format_left_justify = Left
+menu_format_left_justify_tooltip = Left Justify Selected Text
 menu_format_right_justify = Right
+menu_format_right_justify_tooltip = Right Justify Selected Text
 menu_format_center_justify = Center
+menu_format_center_justify_tooltip = Center Justify Selected Text
 menu_format_style = Style
 menu_format_justification = Justify
