--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -296,6 +296,7 @@ ConfirmationCodeSent=Confirmation code sent!
 ## Enter/View issue
 ViewIssue=View issue
 EnterNewIssue=Enter new issue
+EnterNewIssueType=Enter new {0}
 EnterNewBriefInstructions=Click the issue type name to enter a new issue from scratch or select a template.
 DefaultText=Default text attribute is used when more distinguishing information than the issue ID is needed. It is used in emails after an issue is entered, for example.
 StaticIssueInfo=Issue info
