The idea behind these changes is to disallow required dropdown attributes without active attribute options, since this makes it impossible to enter an artifact.
* AttributeGroup.java: added methods getRModuleAttributes() and RIssueTypeAttributes() to obtain those objects directly for this attribute group. That way we do not have to do a database call to get each RModuleAttribute or RModuleIssueType when iterating through the group's attributes.
* ModuleAttributeEdit.java: doDeleteattributeoptions(), doSave(): check that user has not just deleted or inactivated all the options for a required attribute. If they have,  mark the attribute as non-required and display alert message letting the user know that has been done.
* IssueTypeAttributeEdit.java: doDeleteissuetypeoptions, doSave(): check that user has not just deleted or inactivated all the options for a required attribute. If they have,  mark the attribute as non-required and display alert message letting the user know that has been done. (same as above for global issue type mappings)
* AttributeGroup.java:  doSaveattributes(), doSaveglobal():  use AttributeGroup.getRModuleAttributes or RIssueTypeAttributes repectively instead of getAttributes, then retrieving each RMA or RIA in turn.   First iterate through to check that they are not marking required an attribute that has no active options. If they are, do not save, throw up alert message. Other minor code cleanups.
* IssueTypeAttributeEdit.vm, ModuleAttributeEdit.vm:  when going to add new global attribute options, the cancel-to target was getting lost.  Reset cancel target.
* ScarabBundle_en_US.properties: add resources CannotRequireAttributeWithNoOptions
and DeletedOptionsFromRequiredAttribute.
Issue number:  18689
Submitted by:  elicia

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -887,6 +887,8 @@ AttrMappedToIssueTypes=This attribute is associated with one or more issue types
 NoUserAttributeSelected=No user attribute was selected for removal.
 NoAttributeSelected=No attribute was selected for removal.
 CannotDeleteAttributeFromLockedIssueType=You cannot delete this attribute, because this issue type is locked.
+DeletedOptionsFromRequiredAttribute=You have just removed all the active options from this required attribute.  The attribute has been marked as no longer being required. If you wish to require it, please add some active options.
+CannotRequireAttributeWithNoOptions=You cannot mark as required an attribute that has no active options.
 
 ## XMLExport
 XMLExportSettingsScreen=This screen allows you to export all of the global settings and currently selected module settings (optionally including the user data) into an XML file. This file can either be saved to disk (with the given name) or exported into your browser window and saved.
