Issue number: 21855, 21631, and 22117.  All related to dealing with mysql limitations on the sql that issue search generates.  These commits mostly forward port the changes for 21855 which were applied to the SCAST_T1_1 branch that deal with the number of filter criteria that can be applied.  Issue 21631 was handled differently in this commit than the one applied earlier.  The maximum join limit is handled internally by executing additional select statements, so the columns displayed is not limited (until we are able to determine a new maximum.)  The display columns also do not enter into the filter criteria so we always have around 9-12 (current default is 9) filter criteria regardless of which columns are displayed. 22117 is just a request to port 21855 to HEAD.
Modified files:
* src/conf/Scarab.properties - added scarab.query.max.filter_criteria=9
* src/i18n/ScarabBundle_en_US.properties - Added keys for complex query
  messages and help:
  DupeCheckSkippedBecauseComplexity, SearchAbortedDueToComplexity, ClickHere,
  QueryLimits
* src/java/org/tigris/scarab/actions/ReportIssue.java - searchAndSetTemplate:
  Give alert if the dedupe step could not be performed and account for search
  results as an iterator instead of list.
* src/java/org/tigris/scarab/actions/Search.java - doPerform and doSelectquery:
  Account for search results as an iterator instead of list.
* src/java/org/tigris/scarab/screens/IssueListExport.java - writeRows:
  Account for search results as an iterator instead of list.
* src/java/org/tigris/scarab/tools/ScarabRequestTool.java -
  getCurrentSearchResults, getUnprotectedCurrentSearchResults,
  getUncachedCurrentSearchResults, getIssuePosInList, getNextIssue,
  getPrevIssue, resetIssueIdList: all modified to work with an iterator
  instead of list.  getCurrentSearchResults also modified to give alert
  message pointing to help doc, if the query was too complex
  Added getPaginatedIterator method which takes and returns an iterator,
  and mimics

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1188,6 +1188,7 @@ UserAttributeRemoved=User attribute(s) {0} removed from the issue type.
 ## ReportIssue
 IssueNoLongerValid=The issue is no longer valid.
 DupeCheckSkippedForLackOfResources=Duplicate issue check was skipped.
+DupeCheckSkippedBecauseComplexity=There are too many attributes being considered to use duplicate checking.  It should either be disabled or the number of attributes in the dedupe group(s) need to be reduced.
 IssueTypeUnavailable=The issue type you were entering became unavailable.
 
 ## QueryList
@@ -1201,6 +1202,8 @@ UserNotPossibleAssignee=The given user cannot be associated with this user attri
 UserInList=That user is already in the list.
 AnyHasReplacedPreviousChoices=The choice of "Any" has replaced previous choices.
 ChoiceAlreadyAccountedAny="Any" covers all attributes and "Created by"
+SearchAbortedDueToComplexity=The combination of filter criteria entered for the query would be too expensive.  {0} for more information.
+ClickHere=Click here
 
 ## TemplateList
 TemplateListBriefInstructions=You may show templates for other issue types using the dropdown issue type list.  Click the link in the 'Name' column to edit the template and the link in the 'Availability' column to use the template.
@@ -1406,7 +1409,7 @@ BestPractices=Best Practices
 HelpFAQ=FAQ
 HelpGlossary=Glossary
 Top=Top
-
+QueryLimits=Query limits
 
 ##Introduction
 ScarabIs=Scarab is
