forward port from SCAST_T1_1 Issue number: 22077 (and 22073) - NPE after session timeout on forms using back button protection. Modified Files: * src/i18n/ScarabBundle_en_US.properties - added LostSessionStateError key * src/java/org/tigris/scarab/actions/ScarabSessionValidator.java -   processCounter: check for null user or lack of counter information and   give user a meaningful message indicating their session likely timed out.

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -607,6 +607,7 @@ CurrentModuleTypesIntro=The current module is separated for convenient access.  
 StackTrace=Stack Trace
 NoErrorMessage=Sorry, there was no error message.
 GenericError=An error has occurred.
+LostSessionStateError=The application state was lost.  This normally happens if your session was timed out.
 ResubmitError=You have attempted to re-submit data that has already been submitted. No changes have been saved.
 ActionNotAssignedPermission=Action is not assigned a permission.
 SpecifyRole=Please specify a role.
