Issue number: 15691 - remove current issue type Modified files: * src/i18n/ScarabBundle_en_US.properties - replaced CurrentModuleTypesIntro   with two alternatives:   CurrentModuleTypesIntroShown and CurrentModuleTypesIntroHidden   and added HideThisSection resource.   Modified the SelectQuery text to make it a more obvious place to look   for a new query page. * src/java/org/tigris/scarab/actions/DefineXModuleList.java - added   doToggleothermodules to handle showing/hiding the other modules section   of issue types. * src/java/org/tigris/scarab/actions/ReportIssue.java - moved the guts of   the doSave method into a new cleanOutStaleIssue static method for   ease of access by TemplateList action. * src/java/org/tigris/scarab/actions/TemplateList.java - doUsetemplate:   clear out any partially entered issue before redirecting to enter a new one. * src/java/org/tigris/scarab/om/AbstractScarabUser.java - added   OtherModulesInIssueTypeList property with getter/setter to allow user to   toggle between single and cross module issue type lists * src/java/org/tigris/scarab/om/ScarabUser.java - see AbstractScarabUser * src/java/org/tigris/scarab/om/ScarabUserImpl.java - see AbstractScarabUser * src/java/org/tigris/scarab/tools/ScarabRequestTool.java - added   getLastEnteredIssueTypeOrTemplate method to be used in CommonNav.vm   for determining whether and how to display a quick link for entering a   new issue of the last entered type. * src/templates/macros/GlobalMacros.vm - attrValueLeafSelect macro: removed a   conditional block that was no longer relevent due to changes in the following   line.  I could have altered the conditional, but all the other similar macros   did not include it.   templateAttrValueLeafSelect macro: The issueType is already that of the   issue being entered, not the template. * src/templates/macros/MITListMacro.vm - createMITList macro: default to   only showing current module issuetypes with link to add other modules.   This keeps the screen sim

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -601,7 +601,9 @@ MaxPerPage=Max items per page
 NumberOfIssues=Number of issues
 EnteringListWillOverwrite=Entering a previously saved list's name will overwrite the old list.
 EditingPreviouslySaved=Editing a previously saved list is not implemented.
-CurrentModuleTypesIntro=The current module is separated for convenient access.  Issue types in this section can be combined with those in the following section.
+CurrentModuleTypesIntroShown=The current module is separated for convenient access.  Issue types in this section can be combined with those in other modules from the following section. 
+HideThisSection=<a href="{0}">Hide this section</a>
+CurrentModuleTypesIntroHidden=Issue types in the current module. <a href="{0}">Click here</a> to create a cross module list.
 
 ##Error
 StackTrace=Stack Trace
@@ -933,7 +935,7 @@ CollabNet=CollabNet
 Scarab=Scarab
 Debugging=Debugging:
 IssueId=Issue ID
-SelectQuery=Select query...
+SelectQuery=New and saved queries...
 NewQuery=New query
 NewQueryWithNewIssueTypes=New query with new issue types
 MostRecent=Most recent
