[intern]nicer layout for account dialog

--- a/res/org/columba/mail/i18n/dialog/account.properties
+++ b/res/org/columba/mail/i18n/dialog/account.properties
@@ -110,9 +110,8 @@ automatically_download_new_messages=Automatically download new messages
 automatically_download_new_messages_mnemonic=a
 leave_messages_on_server=Leave messages on server
 leave_messages_on_server_mnemonic=l
-limit_message_download_to=Limit Message download to
+limit_message_download_to=Limit Message download to (KB)
 limit_message_download_to_mnemonic=m
-KB_per_message=KB per message
 exclude_from_fetch_all=Exclude from Fetch All
 exclude_from_fetch_all_mnemonic=e
 
