--- a/res/org/columba/mail/i18n/dialog/general.properties
+++ b/res/org/columba/mail/i18n/dialog/general.properties
@@ -1,7 +1,6 @@
 # Sample ResourceBundle properties file
-mark_messages_read=Mark messages read after
+mark_messages_read=Mark messages as read after (seconds)
 
-seconds=seconds
 
 locale=Language:
 
