[intern] fixed EnableHtmlAction and fixed some menu texts

--- a/res/org/columba/mail/i18n/menu/mainframe.properties
+++ b/res/org/columba/mail/i18n/menu/mainframe.properties
@@ -9,6 +9,8 @@
 
 menu_message = Message
 
+menu_format = Format
+menu_format_style = Style
 
 menu_folder_newfolder = New Subfolder...
 menu_folder_newvirtualfolder = New Virtual Subfolder...
