[feature]implemented all configuration options of "Mail Options" dialog

--- a/res/org/columba/mail/i18n/menu/mainframe.properties
+++ b/res/org/columba/mail/i18n/menu/mainframe.properties
@@ -156,6 +156,8 @@ menu_message_replyasattachment = Reply as Attachment
 menu_message_replyasattachment_tooltip = Reply as Attachment
 menu_message_forward = Forward
 menu_message_forward_tooltip = Forward selected message to somebody
+menu_message_forward_as_attachment = Forward As Attachment
+menu_message_forward_as_attachment_tooltip = Forward selected message as attachment to somebody
 menu_message_forwardinline = Forward Inline
 menu_message_forwardinline_tooltip = Forward selected message as inline
 menu_message_move = Move to Folder...
