Updated French resource bundles.

--- a/src/i18n/InitDbScarabBundle_fr_FR.properties
+++ b/src/i18n/InitDbScarabBundle_fr_FR.properties
@@ -154,6 +154,7 @@ TaskTemplate = Gabarit de tâche
 Feature = Fonctionnalité
 FeatureDescription = Une nouvelle fonctionnalité.
 FeatureTemplate = Gabarit de fonctionnalité
+Enhancement = Amélioration
 EnhancementDescription = Amélioration d'une fonctionnalité existante.
 EnhancementTemplate = Gabarit d'amélioration
 
@@ -163,5 +164,5 @@ EnhancementTemplate = Gabarit d'amélioration
 
 AttributeGroupOne = Groupe d'attributs 1
 dedupeAttributes = Attributs pour la vérification des doublons
-AttributeGroupTwo = Attribute group two
+AttributeGroupTwo = Groupe d'attributs 2
 nonDedupeAttributes = Autres attributs
