PatternLayoutTest runs green.

--- a/tests/witness/patternLayout.6
+++ b/tests/witness/patternLayout.6
@@ -1,17 +1,17 @@
- [main] DEBUG rnLayoutTestCase - Message 0
+ [main] DEBUG atternLayoutTest - Message 0
  [main] DEBUG root - Message 0
- [main] INFO  rnLayoutTestCase - Message 1
+ [main] INFO  atternLayoutTest - Message 1
  [main] INFO  root - Message 1
- [main] WARN  rnLayoutTestCase - Message 2
+ [main] WARN  atternLayoutTest - Message 2
  [main] WARN  root - Message 2
- [main] ERROR rnLayoutTestCase - Message 3
+ [main] ERROR atternLayoutTest - Message 3
  [main] ERROR root - Message 3
- [main] FATAL rnLayoutTestCase - Message 4
+ [main] FATAL atternLayoutTest - Message 4
  [main] FATAL root - Message 4
- [main] DEBUG rnLayoutTestCase - Message 5
+ [main] DEBUG atternLayoutTest - Message 5
 java.lang.Exception: Just testing
-	at org.apache.log4j.PatternLayoutTestCase.common(X)
-	at org.apache.log4j.PatternLayoutTestCase.test6(X)
+	at org.apache.log4j.PatternLayoutTest.common(X)
+	at org.apache.log4j.PatternLayoutTest.test6(X)
 	at java.lang.reflect.Method.invoke(X)
 	at junit.framework.TestCase.runTest(X)
 	at junit.framework.TestCase.runBare(X)
@@ -21,12 +21,10 @@ java.lang.Exception: Just testing
 	at junit.framework.TestCase.run(X)
 	at junit.framework.TestSuite.runTest(X)
 	at junit.framework.TestSuite.run(X)
-	at org.apache.tools.ant.taskdefs.optional.junit.JUnitTestRunner.run(X)
-	at org.apache.tools.ant.taskdefs.optional.junit.JUnitTestRunner.main(X)
- [main] INFO  rnLayoutTestCase - Message 6
+ [main] INFO  atternLayoutTest - Message 6
 java.lang.Exception: Just testing
-	at org.apache.log4j.PatternLayoutTestCase.common(X)
-	at org.apache.log4j.PatternLayoutTestCase.test6(X)
+	at org.apache.log4j.PatternLayoutTest.common(X)
+	at org.apache.log4j.PatternLayoutTest.test6(X)
 	at java.lang.reflect.Method.invoke(X)
 	at junit.framework.TestCase.runTest(X)
 	at junit.framework.TestCase.runBare(X)
@@ -36,12 +34,10 @@ java.lang.Exception: Just testing
 	at junit.framework.TestCase.run(X)
 	at junit.framework.TestSuite.runTest(X)
 	at junit.framework.TestSuite.run(X)
-	at org.apache.tools.ant.taskdefs.optional.junit.JUnitTestRunner.run(X)
-	at org.apache.tools.ant.taskdefs.optional.junit.JUnitTestRunner.main(X)
- [main] WARN  rnLayoutTestCase - Message 7
+ [main] WARN  atternLayoutTest - Message 7
 java.lang.Exception: Just testing
-	at org.apache.log4j.PatternLayoutTestCase.common(X)
-	at org.apache.log4j.PatternLayoutTestCase.test6(X)
+	at org.apache.log4j.PatternLayoutTest.common(X)
+	at org.apache.log4j.PatternLayoutTest.test6(X)
 	at java.lang.reflect.Method.invoke(X)
 	at junit.framework.TestCase.runTest(X)
 	at junit.framework.TestCase.runBare(X)
@@ -51,12 +47,10 @@ java.lang.Exception: Just testing
 	at junit.framework.TestCase.run(X)
 	at junit.framework.TestSuite.runTest(X)
 	at junit.framework.TestSuite.run(X)
-	at org.apache.tools.ant.taskdefs.optional.junit.JUnitTestRunner.run(X)
-	at org.apache.tools.ant.taskdefs.optional.junit.JUnitTestRunner.main(X)
- [main] ERROR rnLayoutTestCase - Message 8
+ [main] ERROR atternLayoutTest - Message 8
 java.lang.Exception: Just testing
-	at org.apache.log4j.PatternLayoutTestCase.common(X)
-	at org.apache.log4j.PatternLayoutTestCase.test6(X)
+	at org.apache.log4j.PatternLayoutTest.common(X)
+	at org.apache.log4j.PatternLayoutTest.test6(X)
 	at java.lang.reflect.Method.invoke(X)
 	at junit.framework.TestCase.runTest(X)
 	at junit.framework.TestCase.runBare(X)
@@ -66,12 +60,10 @@ java.lang.Exception: Just testing
 	at junit.framework.TestCase.run(X)
 	at junit.framework.TestSuite.runTest(X)
 	at junit.framework.TestSuite.run(X)
-	at org.apache.tools.ant.taskdefs.optional.junit.JUnitTestRunner.run(X)
-	at org.apache.tools.ant.taskdefs.optional.junit.JUnitTestRunner.main(X)
- [main] FATAL rnLayoutTestCase - Message 9
+ [main] FATAL atternLayoutTest - Message 9
 java.lang.Exception: Just testing
-	at org.apache.log4j.PatternLayoutTestCase.common(X)
-	at org.apache.log4j.PatternLayoutTestCase.test6(X)
+	at org.apache.log4j.PatternLayoutTest.common(X)
+	at org.apache.log4j.PatternLayoutTest.test6(X)
 	at java.lang.reflect.Method.invoke(X)
 	at junit.framework.TestCase.runTest(X)
 	at junit.framework.TestCase.runBare(X)
@@ -81,5 +73,3 @@ java.lang.Exception: Just testing
 	at junit.framework.TestCase.run(X)
 	at junit.framework.TestSuite.runTest(X)
 	at junit.framework.TestSuite.run(X)
-	at org.apache.tools.ant.taskdefs.optional.junit.JUnitTestRunner.run(X)
-	at org.apache.tools.ant.taskdefs.optional.junit.JUnitTestRunner.main(X)
