Fixed problems associated with name change XTestCase -> XTest.
The bar is green fall all tests except the Compression test.

--- a/tests/witness/tbr-test1.1
+++ b/tests/witness/tbr-test1.1
@@ -1,2 +1,2 @@
-TimeBasedRollingTestCase - Hello---0
-TimeBasedRollingTestCase - Hello---1
+TimeBasedRollingTest - Hello---0
+TimeBasedRollingTest - Hello---1
