--- a/tests/witness/tbr-test1.2
+++ b/tests/witness/tbr-test1.2
@@ -1,2 +1,2 @@
-TimeBasedRollingTestCase - Hello---2
-TimeBasedRollingTestCase - Hello---3
+TimeBasedRollingTest - Hello---2
+TimeBasedRollingTest - Hello---3
