--- a/tests/witness/tbr-test5.1
+++ b/tests/witness/tbr-test5.1
@@ -1,2 +1,2 @@
-TimeBasedRollingTestCase - Hello---0
-TimeBasedRollingTestCase - Hello---1
+TimeBasedRollingTest - Hello---0
+TimeBasedRollingTest - Hello---1
